// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@idraw/board scale 001 1`] = `
[
  {
    "props": {
      "height": 1600,
      "width": 2400,
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "clearRect",
  },
  {
    "props": {
      "height": 1600,
      "width": 2400,
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
  {
    "props": {
      "height": 480,
      "width": 800,
      "x": 40,
      "y": 40,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
  {
    "props": {
      "height": 480,
      "width": 800,
      "x": 320,
      "y": 320,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
  {
    "props": {
      "height": 480,
      "width": 800,
      "x": 640,
      "y": 640,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
  {
    "props": {
      "height": 400,
      "width": 800,
      "x": 1560,
      "y": 1160,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
]
`;

exports[`@idraw/board scale 001 2`] = `
[
  {
    "props": {
      "height": 1600,
      "width": 2400,
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "clearRect",
  },
  {
    "props": {
      "height": 1600,
      "width": 2400,
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "clearRect",
  },
  {
    "props": {
      "dHeight": 3600,
      "dWidth": 4000,
      "dx": 200,
      "dy": 0,
      "img": <canvas
        height="3600"
        width="4000"
      />,
      "sHeight": 3600,
      "sWidth": 4000,
      "sx": 0,
      "sy": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "drawImage",
  },
  {
    "props": {
      "dHeight": 3600,
      "dWidth": 4000,
      "dx": 200,
      "dy": 0,
      "img": <canvas
        height="3600"
        width="4000"
      />,
      "sHeight": 3600,
      "sWidth": 4000,
      "sx": 0,
      "sy": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "drawImage",
  },
]
`;

exports[`@idraw/board scale 002 1`] = `
[
  {
    "props": {
      "height": 1600,
      "width": 2400,
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "clearRect",
  },
  {
    "props": {
      "height": 1600,
      "width": 2400,
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
  {
    "props": {
      "height": 480,
      "width": 800,
      "x": 40,
      "y": 40,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
  {
    "props": {
      "height": 480,
      "width": 800,
      "x": 320,
      "y": 320,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
  {
    "props": {
      "height": 480,
      "width": 800,
      "x": 640,
      "y": 640,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
  {
    "props": {
      "height": 400,
      "width": 800,
      "x": 1560,
      "y": 1160,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
]
`;

exports[`@idraw/board scale 002 2`] = `
[
  {
    "props": {
      "height": 1600,
      "width": 2400,
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "clearRect",
  },
  {
    "props": {
      "height": 1600,
      "width": 2400,
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "clearRect",
  },
  {
    "props": {
      "dHeight": 2400,
      "dWidth": 4800,
      "dx": 0,
      "dy": 200,
      "img": <canvas
        height="2400"
        width="4800"
      />,
      "sHeight": 2400,
      "sWidth": 4800,
      "sx": 0,
      "sy": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "drawImage",
  },
  {
    "props": {
      "dHeight": 2400,
      "dWidth": 4800,
      "dx": 0,
      "dy": 200,
      "img": <canvas
        height="2400"
        width="4800"
      />,
      "sHeight": 2400,
      "sWidth": 4800,
      "sx": 0,
      "sy": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "drawImage",
  },
]
`;

exports[`@idraw/board scale 003 1`] = `
[
  {
    "props": {
      "height": 1600,
      "width": 2400,
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "clearRect",
  },
  {
    "props": {
      "height": 1600,
      "width": 2400,
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
  {
    "props": {
      "height": 480,
      "width": 800,
      "x": 40,
      "y": 40,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
  {
    "props": {
      "height": 480,
      "width": 800,
      "x": 320,
      "y": 320,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
  {
    "props": {
      "height": 480,
      "width": 800,
      "x": 640,
      "y": 640,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
  {
    "props": {
      "height": 400,
      "width": 800,
      "x": 1560,
      "y": 1160,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
]
`;

exports[`@idraw/board scale 003 2`] = `
[
  {
    "props": {
      "height": 1600,
      "width": 2400,
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "clearRect",
  },
  {
    "props": {
      "height": 1600,
      "width": 2400,
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "clearRect",
  },
  {
    "props": {
      "dHeight": 2400,
      "dWidth": 4000,
      "dx": 0,
      "dy": 0,
      "img": <canvas
        height="2400"
        width="4000"
      />,
      "sHeight": 2400,
      "sWidth": 4000,
      "sx": 0,
      "sy": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "drawImage",
  },
  {
    "props": {
      "dHeight": 2400,
      "dWidth": 4000,
      "dx": 0,
      "dy": 0,
      "img": <canvas
        height="2400"
        width="4000"
      />,
      "sHeight": 2400,
      "sWidth": 4000,
      "sx": 0,
      "sy": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "drawImage",
  },
]
`;

exports[`@idraw/board scale 1`] = `
[
  {
    "props": {
      "height": 1600,
      "width": 2400,
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "clearRect",
  },
  {
    "props": {
      "height": 1600,
      "width": 2400,
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
  {
    "props": {
      "height": 480,
      "width": 800,
      "x": 40,
      "y": 40,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
  {
    "props": {
      "height": 480,
      "width": 800,
      "x": 320,
      "y": 320,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
  {
    "props": {
      "height": 480,
      "width": 800,
      "x": 640,
      "y": 640,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
  {
    "props": {
      "height": 400,
      "width": 800,
      "x": 1560,
      "y": 1160,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
]
`;

exports[`@idraw/board scale 2`] = `
[
  {
    "props": {
      "height": 1600,
      "width": 2400,
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "clearRect",
  },
  {
    "props": {
      "height": 1600,
      "width": 2400,
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "clearRect",
  },
  {
    "props": {
      "dHeight": 1600,
      "dWidth": 2400,
      "dx": 600,
      "dy": 400,
      "img": <canvas
        height="1600"
        width="2400"
      />,
      "sHeight": 1600,
      "sWidth": 2400,
      "sx": 0,
      "sy": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "drawImage",
  },
  {
    "props": {
      "dHeight": 1600,
      "dWidth": 2400,
      "dx": 600,
      "dy": 400,
      "img": <canvas
        height="1600"
        width="2400"
      />,
      "sHeight": 1600,
      "sWidth": 2400,
      "sx": 0,
      "sy": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "drawImage",
  },
]
`;
